--- a/shop.html
+++ b/shop.html
@@ -153,7 +153,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/w8KEmMt.png" alt="Mule"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Mule</h5><p>Valor: R$ 3.000.500,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Mule</h5><p>Valor: R$ 10000000</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
@@ -233,6 +233,7 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
 
 
