--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - 021 CUSTOMS</title>
-<link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
+<title>Mecânica - FUSION CUSTOMS</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -114,7 +114,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <div class="container d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex align-items-center gap-3">
         <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
-        <div class="logo">021 CUSTOMS</div>
+        <div class="logo">FUSION CUSTOMS</div>
     </div>
 
     <!-- Botão hamburger para celular -->
@@ -230,11 +230,11 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   <h2 class="mb-4 text-center">Sobre Nós</h2>
   <div class="row align-items-center">
     <div class="col-md-6 text-center">
-      <img src="https://i.imgur.com/SP9nsky.png" alt="021 CUSTOMS Logo" style="max-width:250px; border-radius:8px;" draggable="false">
+      <img src="https://i.imgur.com/SP9nsky.png" alt="FUSION CUSTOMS Logo" style="max-width:250px; border-radius:8px;" draggable="false">
     </div>
     <div class="col-md-6">
       <p>
-        A 021 CUSTOMS, localizada na Atlanta RJ, oferece serviços automotivos de qualidade, incluindo tunagem, pintura e conserto de veículos. Com mais de 5 anos de experiência no mercado, investimos em tecnologia e contamos com profissionais altamente qualificados, garantindo segurança e excelência em cada serviço. Nosso ambiente familiar proporciona boa sintonia entre clientes, colaboradores e fornecedores, sempre seguindo rigorosos padrões de qualidade.
+        A FUSION CUSTOMS, localizada na Atlanta RJ, oferece serviços automotivos de qualidade, incluindo tunagem, pintura e conserto de veículos. Com mais de 5 anos de experiência no mercado, investimos em tecnologia e contamos com profissionais altamente qualificados, garantindo segurança e excelência em cada serviço. Nosso ambiente familiar proporciona boa sintonia entre clientes, colaboradores e fornecedores, sempre seguindo rigorosos padrões de qualidade.
       </p>
     </div>
   </div>
@@ -269,6 +269,7 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
