--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex align-items-center gap-3">
-        <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
+        <img src="https://imgur.com/WWZV5uc.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
         <div class="logo">FUSION CUSTOMS</div>
     </div>
 
@@ -269,6 +269,7 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
