--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - FUSION CUSTOMS</title>
+<title>Mecânica - Fusion Customs</title>
 <link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Bootstrap 5 -->
@@ -113,7 +113,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex align-items-center gap-3">
-        <img src="https://imgur.com/WWZV5uc.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
+        <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
         <div class="logo">FUSION CUSTOMS</div>
     </div>
 
@@ -269,6 +269,7 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
