--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   <h2 class="mb-4 text-center">Sobre Nós</h2>
   <div class="row align-items-center">
     <div class="col-md-6 text-center">
-      <img src="https://i.imgur.com/SP9nsky.png" alt="FUSION CUSTOMS Logo" style="max-width:250px; border-radius:8px;" draggable="false">
+      <img src="https://imgur.com/UX64xoQ.png" alt="FUSION CUSTOMS Logo" style="max-width:250px; border-radius:8px;" draggable="false">
     </div>
     <div class="col-md-6">
       <p>
@@ -269,6 +269,7 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
