--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
     </div>
     <div class="col-md-6">
       <p>
-        A FUSION CUSTOMS, localizada na Atlanta RJ, oferece serviços automotivos de qualidade, incluindo tunagem, pintura e conserto de veículos. Com mais de 5 anos de experiência no mercado, investimos em tecnologia e contamos com profissionais altamente qualificados, garantindo segurança e excelência em cada serviço. Nosso ambiente familiar proporciona boa sintonia entre clientes, colaboradores e fornecedores, sempre seguindo rigorosos padrões de qualidade.
+        A Fusion Customs, localizada na Central RP, oferece serviços automotivos de qualidade, incluindo tunagem, pintura e conserto de veículos. Com mais de 5 anos de experiência no mercado, investimos em tecnologia e contamos com profissionais altamente qualificados, garantindo segurança e excelência em cada serviço. Nosso ambiente familiar proporciona boa sintonia entre clientes, colaboradores e fornecedores, sempre seguindo rigorosos padrões de qualidade.
       </p>
     </div>
   </div>
@@ -269,6 +269,7 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
 
