--- a/calculadora.html
+++ b/calculadora.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>021 CUSTOMS - Relatório</title>
-<link rel="icon" href="https://i.imgur.com/SP9nsky.png">
+<title>Fusion Customs - Relatório</title>
+<link rel="icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -49,8 +49,8 @@ button:hover {transform: scale(1.03);}
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
   <div class="d-flex align-items-center gap-3">
-    <img src="https://i.imgur.com/SP9nsky.png" style="height:65px;border-radius:8px">
-    <div class="logo">021 CUSTOMS</div>
+    <img src="https://imgur.com/UX64xoQ.png" style="height:65px;border-radius:8px">
+    <div class="logo">Fusion Customs</div>
   </div>
   <nav class="d-none d-md-flex align-items-center nav-links">
     <a href="index.html">Início</a>
@@ -278,6 +278,7 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
 
 
 
