--- a/tabela.html
+++ b/tabela.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>021 CUSTOMS - Tabela de Serviços</title>
+<title>Fusion Customs - Tabela de Serviços</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
@@ -54,8 +54,8 @@ th{background:#f1f1f1}
 <header class="topbar">
 <div class="container container-max d-flex justify-content-between align-items-center">
 <div class="d-flex align-items-center gap-3">
-<img src="https://i.imgur.com/SP9nsky.png" style="height:80px;border-radius:8px">
-<div class="logo">021 CUSTOMS</div>
+<img src="https://imgur.com/UX64xoQ.png" style="height:80px;border-radius:8px">
+<div class="logo">Fusion Customs</div>
 </div>
 
 <nav class="d-none d-md-flex nav-links align-items-center">
@@ -198,5 +198,6 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
