--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Loja - 021 CUSTOMS</title>
+<title>Fusion Customs - Loja</title>
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
 
 <!-- Proteção Anti-Cópia / Anti-Inspecionar -->
@@ -102,7 +102,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
           <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
           <div class="overlay"></div>
         </div>
-        <div class="logo">021 CUSTOMS</div>
+        <div class="logo">Fusion Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="index.html">Início</a>
@@ -233,6 +233,7 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
 
 
