--- a/relatorio.html
+++ b/relatorio.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>021 CUSTOMS - RELATÓRIO DE VEICULOS EXCLUSIVO - MECÂNICA</title>
-<link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
+<title>Fusion Customs - RELATÓRIO DE VEICULOS EXCLUSIVO - MECÂNICA</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -46,8 +46,8 @@ button.send-btn:hover { background-color: #4752c4; }
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-        <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
-        <div class="logo">021 CUSTOMS</div>
+        <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
+        <div class="logo">Fusion Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="index.html">Início</a>
@@ -105,7 +105,7 @@ button.send-btn:hover { background-color: #4752c4; }
 
 <!-- Footer -->
 <footer class="text-center py-4 text-muted">
-© <span id="year"></span> 021 CUSTOMS - Todos os direitos reservados
+© <span id="year"></span> Fusion Customs - Todos os direitos reservados
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -158,7 +158,7 @@ function gerarRelatorio(){
     const relatorio=document.getElementById("relatorio");
     if(!n||!i||!c||itens.length===0){relatorio.value=""; return;}
     let total=0;
-    let texto="🛠️ **Relatório de Vendas - 021 CUSTOMS** 🛠️\n\n";
+    let texto="🛠️ **Relatório de Vendas - Fusion Customs** 🛠️\n\n";
     itens.forEach(item=>{
         let valor=valores[item];
         total+=valor;
@@ -193,6 +193,7 @@ function enviarDiscord(){
 
 </body>
 </html>
+
 
 
 
