--- a/funcionarios.html
+++ b/funcionarios.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mecânica - 021 CUSTOMS</title>
-<link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
+<title>Fusion Customs - Funcionarios</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -108,8 +108,8 @@ body {
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; border-radius:8px;">
-      <div class="logo">021 CUSTOMS</div>
+      <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; border-radius:8px;">
+      <div class="logo">Fusion Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
@@ -222,5 +222,6 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
