--- a/certificado.html
+++ b/certificado.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Gerador de Certificado - 021 CUSTOMS</title>
-<link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
+<title>Gerador de Certificado - Fusion Customs</title>
+<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -41,8 +41,8 @@ body {
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://i.imgur.com/SP9nsky.png" style="height:60px;border-radius:8px" draggable="false">
-      <div class="logo">021 CUSTOMS</div>
+      <img src="https://imgur.com/UX64xoQ.png" style="height:60px;border-radius:8px" draggable="false">
+      <div class="logo">Fusion Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="#">Início</a>
@@ -113,7 +113,7 @@ document.getElementById('certForm').addEventListener('submit', async function(e)
   doc.text(nome,148.5,82,{align:'center'});
 
   // Imagem do aluno
-  const imgUrl = 'https://i.imgur.com/Bhx0tPX.png';
+  const imgUrl = 'https://imgur.com/UX64xoQ.png';
   try {
     const imgBlob = await fetch(imgUrl).then(r=>r.blob());
     const reader = new FileReader();
@@ -155,7 +155,7 @@ function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
 
   const descricao = 
 `🎉 **Parabéns! Você concluiu o curso com sucesso.**  
-🏢 **Empresa:** 021 CUSTOMS Mecânica  
+🏢 **Empresa:** Fusion Customs -  Mecânica  
 🎓 **Curso:** ${curso}  
 👤 **Aluno:** ${nome}  
 👨‍🏫 **Instrutor:** ${instrutor}  
@@ -176,6 +176,7 @@ function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
