--- a/tabela.html
+++ b/tabela.html
@@ -170,7 +170,7 @@ th{background:#f1f1f1}
 </main>
 
 <footer class="text-center text-muted mt-4 mb-3">
-© <span id="year"></span> 021 Customs
+© <span id="year"></span> Fusion Customs - Direitos Reservados.
 </footer>
 
 <script>
@@ -198,6 +198,7 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
 
 
