--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Fusion Customs - Loja</title>
-<link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
+<link rel="icon" type="image/x-icon" href="https://imgur.com/WWZV5uc.png">
 
 <!-- Proteção Anti-Cópia / Anti-Inspecionar -->
 <script>
@@ -99,7 +99,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
         <div class="logo-wrapper">
-          <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
+          <img src="https://imgur.com/UX64xoQ.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
           <div class="overlay"></div>
         </div>
         <div class="logo">Fusion Customs</div>
@@ -233,6 +233,7 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
 
 
