--- a/shop.html
+++ b/shop.html
@@ -110,7 +110,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatorio</a>
         <a href="funcionarios.html">Funcionarios</a>
-        <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
+        <a href="https://discord.gg/v6pfYRaT9w" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
     </nav>
@@ -233,6 +233,7 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
 
 
