--- a/reparo.html
+++ b/reparo.html
@@ -83,7 +83,7 @@ user-select:none;
 <a href="shop.html">Loja</a>
 <a href="relatorio.html">Relatório</a>
 <a href="funcionarios.html">Funcionários</a>
-<a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
+<a href="https://discord.gg/v6pfYRaT9w" target="_blank" class="discord-btn">
 <i class="fa-brands fa-discord"></i> Discord
 </a>
 </nav>
@@ -218,6 +218,7 @@ function limpar(){
 
 </body>
 </html>
+
 
 
 
