--- a/tabela.html
+++ b/tabela.html
@@ -14,10 +14,7 @@
 body{
   font-family:Inter,sans-serif;
   background:var(--bg);
-  user-select:none; /* anti-seleção */
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
+  user-select:none;
 }
 .topbar{background:var(--top);color:#fff;padding:12px 0}
 .logo{font-weight:700}
@@ -106,25 +103,39 @@ th{background:#f1f1f1}
 <div class="subtitulo">Oficina</div>
 <table>
 <tr><th>Serviço</th><th>Valor</th></tr>
-<tr><td>Motor</td><td class="price-sem">R$ 150.000</td></tr>
+
+<tr><td><strong>Motor - Nível 1</strong></td><td class="price-sem">R$ 120.000</td></tr>
+<tr><td><strong>Motor - Nível 2</strong></td><td class="price-sem">R$ 150.000</td></tr>
+<tr><td><strong>Motor - Nível 3</strong></td><td class="price-sem">R$ 190.000</td></tr>
+
 <tr><td>Bloco de Motor</td><td class="price-sem">R$ 40.000</td></tr>
 <tr><td>Som do Motor</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Freio</td><td class="price-sem">R$ 150.000</td></tr>
-<tr><td>Transmissão</td><td class="price-sem">R$ 280.000</td></tr>
+
+<tr><td><strong>Freio - Nível 1</strong></td><td class="price-sem">R$ 90.000</td></tr>
+<tr><td><strong>Freio - Nível 2</strong></td><td class="price-sem">R$ 120.000</td></tr>
+<tr><td><strong>Freio - Nível 3</strong></td><td class="price-sem">R$ 150.000</td></tr>
+
+<tr><td><strong>Transmissão - Nível 1</strong></td><td class="price-sem">R$ 180.000</td></tr>
+<tr><td><strong>Transmissão - Nível 2</strong></td><td class="price-sem">R$ 230.000</td></tr>
+<tr><td><strong>Transmissão - Nível 3</strong></td><td class="price-sem">R$ 280.000</td></tr>
+
+<tr><td><strong>Suspensão - Nível 1</strong></td><td class="price-sem">R$ 65.000</td></tr>
+<tr><td><strong>Suspensão - Nível 2</strong></td><td class="price-sem">R$ 95.000</td></tr>
+<tr><td><strong>Suspensão - Nível 3</strong></td><td class="price-sem">R$ 130.000</td></tr>
+
 <tr><td>Turbo</td><td class="price-sem">R$ 250.000</td></tr>
-<tr><td>Hidráulica</td><td class="price-sem">R$ 95.000</td></tr>
 <tr><td>Blindagem</td><td class="price-sem">R$ 400.000</td></tr>
-<tr><td>Portas</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Saia</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Para-choque Dianteiro</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Capô</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Escapamento</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Gaiola de Proteção</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Para-choque Traseiro</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Buzina</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Painel</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Bancos</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Vidro</td><td class="price-sem">R$ 80.000</td></tr>
+<tr><td>Portas</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Saia</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Para-choque Dianteiro</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Capô</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Escapamento</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Gaiola de Proteção</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Para-choque Traseiro</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Buzina</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Painel</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Bancos</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Vidro</td><td class="price-sem">R$ 32.000</td></tr>
 </table>
 </div>
 
@@ -133,22 +144,22 @@ th{background:#f1f1f1}
 <div class="subtitulo">Pneus</div>
 <table>
 <tr><th>Serviço</th><th>Valor</th></tr>
-<tr><td>Rodas Nacionais</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Rodas Importadas</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Cor das Rodas</td><td class="price-sem">R$ 30.000</td></tr>
-<tr><td>Fumaça</td><td class="price-sem">R$ 30.000</td></tr>
+<tr><td>Rodas Nacionais</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Rodas Importadas</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Cor das Rodas</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Fumaça</td><td class="price-sem">R$ 32.000</td></tr>
 </table>
 
 <div class="subtitulo mt-3">Pintura e Luz</div>
 <table>
 <tr><th>Serviço</th><th>Valor</th></tr>
-<tr><td>Pintura Primária</td><td class="price-sem">R$ 30.000</td></tr>
-<tr><td>Pintura Secundária</td><td class="price-sem">R$ 30.000</td></tr>
-<tr><td>Pintura Cromada</td><td class="price-sem">R$ 30.000</td></tr>
-<tr><td>Pintura Perolado</td><td class="price-sem">R$ 30.000</td></tr>
-<tr><td>Pintura Decal</td><td class="price-sem">R$ 30.000</td></tr>
-<tr><td>Xenon</td><td class="price-sem">R$ 40.000</td></tr>
-<tr><td>Neon</td><td class="price-sem">R$ 40.000</td></tr>
+<tr><td>Pintura Primária</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Pintura Secundária</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Pintura Cromada</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Pintura Perolado</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Pintura Decal</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Xenon</td><td class="price-sem">R$ 32.000</td></tr>
+<tr><td>Neon</td><td class="price-sem">R$ 32.000</td></tr>
 </table>
 </div>
 
@@ -159,8 +170,8 @@ th{background:#f1f1f1}
 <table>
 <tr><th>Local</th><th>Valor</th></tr>
 <tr><td>Oficina</td><td class="price-sem">R$ 5.000</td></tr>
-<tr><td>Cidade</td><td class="price-sem">R$ 10.000</td></tr>
-<tr><td>Paleto</td><td class="price-sem">R$ 20.000</td></tr>
+<tr><td>Cidade</td><td class="price-sem">R$ 17.000</td></tr>
+<tr><td>Paleto</td><td class="price-sem">R$ 27.000</td></tr>
 </table>
 </div>
 
@@ -174,32 +185,22 @@ th{background:#f1f1f1}
 </footer>
 
 <script>
-// Dropdowns
 document.querySelectorAll('.dropdown').forEach(d=>{
   const m=d.querySelector('.dropdown-menu'),t=d.querySelector('.dropdown-toggle');
   d.addEventListener('mouseenter',()=>m.style.display='block');
   d.addEventListener('mouseleave',()=>m.style.display='none');
   t.addEventListener('click',e=>{e.preventDefault();m.style.display=m.style.display==='block'?'none':'block';});
 });
-
-// Ano atual
 document.getElementById("year").textContent=new Date().getFullYear();
-
-// Anti-colar e proteção
 document.addEventListener('contextmenu', e => e.preventDefault());
-document.addEventListener('keydown', function(e) {
-    if (e.ctrlKey && ['c','v','x','a'].includes(e.key.toLowerCase())) {
-        e.preventDefault();
-        alert("Ação proibida!");
-    }
+document.addEventListener('keydown', e=>{
+  if(e.ctrlKey && ['c','v','x','a'].includes(e.key.toLowerCase())){
+    e.preventDefault();
+    alert("Ação proibida!");
+  }
 });
 document.addEventListener('dragstart', e => e.preventDefault());
 </script>
 
 </body>
 </html>
-
-
-
-
-
