--- a/tabela.html
+++ b/tabela.html
@@ -124,9 +124,12 @@ th{background:#f1f1f1}
 <tr><td><strong>Suspensão - Nível 2</strong></td><td class="price-sem">R$ 72.000</td></tr>
 <tr><td><strong>Suspensão - Nível 3</strong></td><td class="price-sem">R$ 82.000</td></tr>
 <tr><td><strong>Suspensão - Nível 4</strong></td><td class="price-sem">R$ 92.000</td></tr>
+<tr><td><strong>Full Turning</strong></td><td class="price-sem">R$ 350.000</td></tr>
 
 <tr><td>Turbo</td><td class="price-sem">R$ 50.000</td></tr>
-<tr><td>Blindagem</td><td class="price-sem">R$ 400.000</td></tr>
+<tr><td>Blindagem</td><td class="price-sem">R$ 500.000</td></tr>
+<tr><td>Blindagem Pneus</td><td class="price-sem">R$ 1.000.000</td></tr>
+<tr><td>Blindagem full</td><td class="price-sem">R$ 1.500.000</td></tr>
 <tr><td>Portas</td><td class="price-sem">R$ 32.000</td></tr>
 <tr><td>Saia</td><td class="price-sem">R$ 32.000</td></tr>
 <tr><td>Para-choque Dianteiro</td><td class="price-sem">R$ 32.000</td></tr>
@@ -206,4 +209,5 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
