--- a/calculadora.html
+++ b/calculadora.html
@@ -6,8 +6,8 @@
 <title>Fusion Customs - Relatório</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
 body{
@@ -23,7 +23,6 @@ body{
 
 .card{border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.15)}
 .card-header{text-align:center;font-weight:700;background:#f0f0f0}
-
 .calc-container{background:#fff;padding:25px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.2)}
 textarea{height:260px;font-family:monospace}
 </style>
@@ -44,7 +43,6 @@ textarea{height:260px;font-family:monospace}
     <a href="shop.html">Loja</a>
     <a href="relatorio.html">Relatório</a>
     <a href="funcionarios.html">Funcionários</a>
-    <a href="#" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
   </nav>
 </div>
 </header>
@@ -52,48 +50,49 @@ textarea{height:260px;font-family:monospace}
 <div class="container">
 <div class="row g-4">
 
-<!-- TUNAGEM -->
+<!-- ================= TUNAGEM ================= -->
 <div class="col-md-4">
 <div class="card h-100">
 <div class="card-header">TUNAGEM</div>
 <div class="card-body overflow-auto" style="max-height:620px">
 
-<!-- MOTOR -->
 <b>Motor</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 1" data-valor="120000" type="checkbox"> Motor Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 2" data-valor="150000" type="checkbox"> Motor Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 3" data-valor="190000" type="checkbox"> Motor Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 1" data-valor="52000" type="checkbox"> Motor Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 2" data-valor="72000" type="checkbox"> Motor Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 3" data-valor="82000" type="checkbox"> Motor Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 4" data-valor="92000" type="checkbox"> Motor Nível 4</div>
 
-<div class="form-check"><input class="form-check-input item" data-nome="Bloco de Motor" data-valor="40000" type="checkbox"> Bloco de Motor</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Som do Motor" data-valor="40000" type="checkbox"> Som do Motor</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Bloco de Motor" data-valor="32000" type="checkbox"> Bloco de Motor</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Som do Motor" data-valor="32000" type="checkbox"> Som do Motor</div>
 
-<!-- FREIO -->
 <hr><b>Freio</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 1" data-valor="90000" type="checkbox"> Freio Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 2" data-valor="120000" type="checkbox"> Freio Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 3" data-valor="150000" type="checkbox"> Freio Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 1" data-valor="32000" type="checkbox"> Freio Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 2" data-valor="52000" type="checkbox"> Freio Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 3" data-valor="112000" type="checkbox"> Freio Nível 3</div>
 
-<!-- TRANSMISSÃO -->
 <hr><b>Transmissão</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 1" data-valor="180000" type="checkbox"> Transmissão Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 2" data-valor="230000" type="checkbox"> Transmissão Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 3" data-valor="280000" type="checkbox"> Transmissão Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 1" data-valor="72000" type="checkbox"> Transmissão Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 2" data-valor="92000" type="checkbox"> Transmissão Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 3" data-valor="112000" type="checkbox"> Transmissão Nível 3</div>
 
-<!-- SUSPENSÃO -->
 <hr><b>Suspensão</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 1" data-valor="65000" type="checkbox"> Suspensão Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 2" data-valor="95000" type="checkbox"> Suspensão Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 3" data-valor="130000" type="checkbox"> Suspensão Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 1" data-valor="52000" type="checkbox"> Suspensão Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 2" data-valor="72000" type="checkbox"> Suspensão Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 3" data-valor="82000" type="checkbox"> Suspensão Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 4" data-valor="92000" type="checkbox"> Suspensão Nível 4</div>
 
 <hr>
-<div class="form-check"><input class="form-check-input item" data-nome="Turbo" data-valor="250000" type="checkbox"> Turbo</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="400000" type="checkbox"> Blindagem</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Turbo" data-valor="50000" type="checkbox"> Turbo</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Full Turning" data-valor="350000" type="checkbox"> Full Turning</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="500000" type="checkbox"> Blindagem</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Pneus" data-valor="1000000" type="checkbox"> Blindagem Pneus</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Full" data-valor="1500000" type="checkbox"> Blindagem Full</div>
 
 </div>
 </div>
 </div>
 
-<!-- ESTÉTICA -->
+<!-- ================= ESTÉTICA ================= -->
 <div class="col-md-4">
 <div class="card h-100">
 <div class="card-header">ESTÉTICA</div>
@@ -115,21 +114,19 @@ textarea{height:260px;font-family:monospace}
 <div class="form-check"><input class="form-check-input item" data-nome="Xenon" data-valor="32000" type="checkbox"> Xenon</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Neon" data-valor="32000" type="checkbox"> Neon</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="32000" type="checkbox"> Vidro</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Bancos" data-valor="32000" type="checkbox"> Bancos</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="32000" type="checkbox"> Painel</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="32000" type="checkbox"> Buzina</div>
 
 </div>
 </div>
 </div>
 
-<!-- RELATÓRIO -->
+<!-- ================= RELATÓRIO ================= -->
 <div class="col-md-4">
 <div class="calc-container h-100">
+
 <label>Mecânico</label>
 <input id="nome" class="form-control mb-2">
 
-<label>ID Cliente</label>
+<label>ID do Cliente</label>
 <input id="id" class="form-control mb-2">
 
 <div class="form-check mb-2">
@@ -144,6 +141,7 @@ textarea{height:260px;font-family:monospace}
 <button class="btn btn-danger mb-2" onclick="limpar()">Limpar</button>
 
 <textarea id="texto" class="form-control mt-2" readonly></textarea>
+
 </div>
 </div>
 
