--- a/calculadora.html
+++ b/calculadora.html
@@ -22,34 +22,34 @@ body{
   position:fixed;
   top:0;
   width:100%;
-  z-index:1000
+  z-index:1000;
 }
 .logo{font-weight:700}
 .nav-links a{
   color:#fff;
   margin-left:18px;
   text-decoration:none;
-  font-weight:600
+  font-weight:600;
 }
 .nav-links a:hover{color:#cfcfcf}
 .card{
   border-radius:14px;
-  box-shadow:0 6px 20px rgba(0,0,0,.15)
+  box-shadow:0 6px 20px rgba(0,0,0,.15);
 }
 .card-header{
   text-align:center;
   font-weight:700;
-  background:#f0f0f0
+  background:#f0f0f0;
 }
 .calc-container{
   background:#fff;
   padding:25px;
   border-radius:14px;
-  box-shadow:0 6px 20px rgba(0,0,0,.2)
+  box-shadow:0 6px 20px rgba(0,0,0,.2);
 }
 textarea{
   height:260px;
-  font-family:monospace
+  font-family:monospace;
 }
 </style>
 </head>
@@ -75,11 +75,11 @@ textarea{
 <div class="container">
 <div class="row g-4">
 
-<!-- ================= TUNAGEM ================= -->
+<!-- ================= TUNAGEM (SEM SCROLL) ================= -->
 <div class="col-md-4">
 <div class="card h-100">
 <div class="card-header">TUNAGEM</div>
-<div class="card-body overflow-auto" style="max-height:620px">
+<div class="card-body">
 
 <b>Motor</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 1" data-valor="52000" type="checkbox"> Motor Nível 1</div>
