--- a/calculadora.html
+++ b/calculadora.html
@@ -6,7 +6,6 @@
 <title>Fusion Customs - Relatório</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -25,13 +24,6 @@ body{
   z-index:1000;
 }
 .logo{font-weight:700}
-.nav-links a{
-  color:#fff;
-  margin-left:18px;
-  text-decoration:none;
-  font-weight:600;
-}
-.nav-links a:hover{color:#cfcfcf}
 .card{
   border-radius:14px;
   box-shadow:0 6px 20px rgba(0,0,0,.15);
@@ -51,116 +43,116 @@ textarea{
   height:260px;
   font-family:monospace;
 }
+.card-body{
+  overflow-y:auto;
+  max-height:420px;
+}
 </style>
 </head>
 
 <body>
 
 <header class="topbar">
-<div class="container d-flex justify-content-between align-items-center">
-  <div class="d-flex align-items-center gap-3">
-    <img src="https://imgur.com/UX64xoQ.png" style="height:60px;border-radius:8px">
-    <div class="logo">Fusion Customs</div>
-  </div>
-  <nav class="d-none d-md-flex nav-links align-items-center">
-    <a href="index.html">Início</a>
-    <a href="tabela.html">Preços</a>
-    <a href="shop.html">Loja</a>
-    <a href="relatorio.html">Relatório</a>
-    <a href="funcionarios.html">Funcionários</a>
-  </nav>
+<div class="container">
+  <div class="logo">Fusion Customs</div>
 </div>
 </header>
 
 <div class="container">
 <div class="row g-4">
 
-<!-- ================= TUNAGEM (SEM SCROLL) ================= -->
-<div class="col-md-4">
+<!-- ================= TUNAGEM ================= -->
+<div class="col-md-3">
 <div class="card h-100">
 <div class="card-header">TUNAGEM</div>
 <div class="card-body">
 
-<b>Motor</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 1" data-valor="52000" type="checkbox"> Motor Nível 1</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 2" data-valor="72000" type="checkbox"> Motor Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 3" data-valor="82000" type="checkbox"> Motor Nível 3</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 4" data-valor="92000" type="checkbox"> Motor Nível 4</div>
-
-<div class="form-check"><input class="form-check-input item" data-nome="Bloco de Motor" data-valor="32000" type="checkbox"> Bloco de Motor</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Som do Motor" data-valor="32000" type="checkbox"> Som do Motor</div>
-
-<hr><b>Freio</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 1" data-valor="32000" type="checkbox"> Freio Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 2" data-valor="52000" type="checkbox"> Freio Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 3" data-valor="112000" type="checkbox"> Freio Nível 3</div>
-
-<hr><b>Transmissão</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 1" data-valor="72000" type="checkbox"> Transmissão Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 2" data-valor="92000" type="checkbox"> Transmissão Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 3" data-valor="112000" type="checkbox"> Transmissão Nível 3</div>
-
-<hr><b>Suspensão</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 1" data-valor="52000" type="checkbox"> Suspensão Nível 1</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 2" data-valor="72000" type="checkbox"> Suspensão Nível 2</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 3" data-valor="82000" type="checkbox"> Suspensão Nível 3</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 4" data-valor="92000" type="checkbox"> Suspensão Nível 4</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 3" data-valor="92000" type="checkbox"> Motor Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 4" data-valor="120000" type="checkbox"> Motor Nível 4</div>
 
 <hr>
+
+<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 1" data-valor="42000" type="checkbox"> Freio Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 2" data-valor="62000" type="checkbox"> Freio Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 3" data-valor="82000" type="checkbox"> Freio Nível 3</div>
+
+<hr>
+
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 1" data-valor="38000" type="checkbox"> Suspensão Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 2" data-valor="58000" type="checkbox"> Suspensão Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 3" data-valor="78000" type="checkbox"> Suspensão Nível 3</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Suspensão Nível 4" data-valor="98000" type="checkbox"> Suspensão Nível 4</div>
+
+<hr>
+
+<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 1" data-valor="52000" type="checkbox"> Transmissão Nível 1</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 2" data-valor="72000" type="checkbox"> Transmissão Nível 2</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Transmissão Nível 3" data-valor="92000" type="checkbox"> Transmissão Nível 3</div>
+
+<hr>
+
 <div class="form-check"><input class="form-check-input item" data-nome="Turbo" data-valor="50000" type="checkbox"> Turbo</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Full Turning" data-valor="350000" type="checkbox"> Full Turning</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="500000" type="checkbox"> Blindagem</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Pneus" data-valor="1000000" type="checkbox"> Blindagem Pneus</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Full" data-valor="1500000" type="checkbox"> Blindagem Full</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="150000" type="checkbox"> Blindagem</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Full Tuning" data-valor="350000" type="checkbox"> Full Tuning</div>
 
 </div>
 </div>
 </div>
 
-<!-- ================= ESTÉTICA (SEM SCROLL) ================= -->
-<div class="col-md-4">
+<!-- ================= ESTÉTICA ================= -->
+<div class="col-md-3">
 <div class="card h-100">
 <div class="card-header">ESTÉTICA</div>
 <div class="card-body">
 
-<b>Carroceria</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Portas" data-valor="32000" type="checkbox"> Portas</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Saia" data-valor="32000" type="checkbox"> Saia</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Para-choque Dianteiro" data-valor="32000" type="checkbox"> Para-choque Dianteiro</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Para-choque Traseiro" data-valor="32000" type="checkbox"> Para-choque Traseiro</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Capô" data-valor="32000" type="checkbox"> Capô</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Escapamento" data-valor="32000" type="checkbox"> Escapamento</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Gaiola de Proteção" data-valor="32000" type="checkbox"> Gaiola de Proteção</div>
-
-<hr><b>Interior</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Bancos" data-valor="32000" type="checkbox"> Bancos</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="32000" type="checkbox"> Painel</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="32000" type="checkbox"> Buzina</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="32000" type="checkbox"> Vidro</div>
-
-<hr><b>Rodas</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Rodas Nacionais" data-valor="32000" type="checkbox"> Rodas Nacionais</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Rodas Importadas" data-valor="32000" type="checkbox"> Rodas Importadas</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Cor das Rodas" data-valor="32000" type="checkbox"> Cor das Rodas</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Fumaça do Pneu" data-valor="32000" type="checkbox"> Fumaça</div>
-
-<hr><b>Pintura</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Primária" data-valor="32000" type="checkbox"> Pintura Primária</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Secundária" data-valor="32000" type="checkbox"> Pintura Secundária</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Pintura Cromada" data-valor="32000" type="checkbox"> Pintura Cromada</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Pintura Perolado" data-valor="32000" type="checkbox"> Pintura Perolado</div>
-<div class="form-check"><input class="form-check-input item" data-nome="Pintura Decal" data-valor="32000" type="checkbox"> Pintura Decal</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Perolado" data-valor="32000" type="checkbox"> Perolado</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Rodas" data-valor="32000" type="checkbox"> Rodas</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Cor das Rodas" data-valor="20000" type="checkbox"> Cor das Rodas</div>
 
-<hr><b>Luzes</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Xenon" data-valor="32000" type="checkbox"> Xenon</div>
+<hr>
+
 <div class="form-check"><input class="form-check-input item" data-nome="Neon" data-valor="32000" type="checkbox"> Neon</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Cor do Neon" data-valor="20000" type="checkbox"> Cor do Neon</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Fumaça do Pneu" data-valor="32000" type="checkbox"> Fumaça do Pneu</div>
+
+<hr>
+
+<div class="form-check"><input class="form-check-input item" data-nome="Parachoque Dianteiro" data-valor="25000" type="checkbox"> Parachoque Dianteiro</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Parachoque Traseiro" data-valor="25000" type="checkbox"> Parachoque Traseiro</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Saia Lateral" data-valor="25000" type="checkbox"> Saia Lateral</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Spoiler" data-valor="25000" type="checkbox"> Spoiler</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Capô" data-valor="25000" type="checkbox"> Capô</div>
+
+</div>
+</div>
+</div>
+
+<!-- ================= PARCERIA ================= -->
+<div class="col-md-3">
+<div class="card h-100">
+<div class="card-header">PARCERIA</div>
+<div class="card-body">
+
+<div class="form-check">
+<input type="checkbox" id="parceria" class="form-check-input">
+<label class="form-check-label">Aplicar desconto de 10%</label>
+</div>
+
+<hr>
+<p class="text-muted">
+Parceria reduz o valor final em 10%.
+</p>
 
 </div>
 </div>
 </div>
 
 <!-- ================= RELATÓRIO ================= -->
-<div class="col-md-4">
+<div class="col-md-3">
 <div class="calc-container h-100">
 
 <label>Mecânico</label>
@@ -169,16 +161,12 @@ textarea{
 <label>ID do Cliente</label>
 <input id="id" class="form-control mb-2">
 
-<div class="form-check mb-2">
-<input type="checkbox" id="parceria" class="form-check-input">
-<label class="form-check-label">Parceria (10%)</label>
-</div>
-
 <label>Total</label>
 <input id="total" class="form-control mb-2" readonly>
 
-<button class="btn btn-success mb-2" onclick="gerar()">Gerar Relatório</button>
-<button class="btn btn-danger mb-2" onclick="limpar()">Limpar</button>
+<button class="btn btn-success w-100 mb-2" onclick="gerar()">Gerar Relatório</button>
+<button class="btn btn-primary w-100 mb-2" onclick="enviarDiscord()">Enviar para Discord</button>
+<button class="btn btn-danger w-100" onclick="limpar()">Limpar</button>
 
 <textarea id="texto" class="form-control mt-2" readonly></textarea>
 
@@ -189,38 +177,61 @@ textarea{
 </div>
 
 <script>
+const WEBHOOK_URL = "COLE_AQUI_SEU_WEBHOOK_DO_DISCORD";
+
 const itens = document.querySelectorAll(".item");
 const totalInput = document.getElementById("total");
 const parceria = document.getElementById("parceria");
 
-itens.forEach(i => i.addEventListener("change", calc));
-parceria.addEventListener("change", calc);
+itens.forEach(i => i.addEventListener("change", calcular));
+parceria.addEventListener("change", calcular);
 
-function calc(){
-  let t = 0;
-  document.querySelectorAll(".item:checked").forEach(i => t += Number(i.dataset.valor));
-  if(parceria.checked) t *= 0.9;
-  totalInput.value = t ? `R$ ${t.toLocaleString("pt-BR")}` : "";
+function calcular(){
+  let total = 0;
+  document.querySelectorAll(".item:checked").forEach(i => total += Number(i.dataset.valor));
+  if(parceria.checked) total *= 0.9;
+  totalInput.value = total ? `R$ ${total.toLocaleString("pt-BR")}` : "";
 }
 
 function gerar(){
-  if(!id.value) return alert("ID obrigatório");
-  let t = 0;
-  let txt = `🛠️ RELATÓRIO FUSION CUSTOMS\n👨‍🔧 Mecânico: ${nome.value || "N/I"}\n🆔 Cliente: ${id.value}\n\n`;
+  if(!id.value) return alert("ID do cliente é obrigatório");
+
+  let total = 0;
+  let rel = `🛠️ RELATÓRIO FUSION CUSTOMS\n`;
+  rel += `👨‍🔧 Mecânico: ${nome.value || "N/I"}\n`;
+  rel += `🆔 Cliente: ${id.value}\n\n`;
+
   document.querySelectorAll(".item:checked").forEach(i=>{
-    t += Number(i.dataset.valor);
-    txt += `• ${i.dataset.nome} - R$ ${Number(i.dataset.valor).toLocaleString("pt-BR")}\n`;
+    total += Number(i.dataset.valor);
+    rel += `• ${i.dataset.nome} - R$ ${Number(i.dataset.valor).toLocaleString("pt-BR")}\n`;
   });
-  if(parceria.checked){ txt += `\n🤝 Parceria aplicada (10%)`; t *= 0.9; }
-  txt += `\n\n💰 TOTAL: R$ ${t.toLocaleString("pt-BR")}`;
-  texto.value = txt;
-  totalInput.value = `R$ ${t.toLocaleString("pt-BR")}`;
+
+  if(parceria.checked){
+    rel += `\n🤝 Parceria aplicada (10%)`;
+    total *= 0.9;
+  }
+
+  rel += `\n\n💰 TOTAL: R$ ${total.toLocaleString("pt-BR")}`;
+  texto.value = rel;
+  totalInput.value = `R$ ${total.toLocaleString("pt-BR")}`;
+}
+
+function enviarDiscord(){
+  if(!texto.value) return alert("Gere o relatório primeiro");
+
+  fetch(WEBHOOK_URL,{
+    method:"POST",
+    headers:{ "Content-Type":"application/json" },
+    body: JSON.stringify({ content: texto.value })
+  })
+  .then(()=>alert("Relatório enviado para o Discord ✅"))
+  .catch(()=>alert("Erro ao enviar para o Discord ❌"));
 }
 
 function limpar(){
-  document.querySelectorAll(".item").forEach(i => i.checked = false);
-  document.querySelectorAll("input").forEach(i => i.value = "");
-  texto.value = "";
+  document.querySelectorAll(".item").forEach(i=>i.checked=false);
+  document.querySelectorAll("input").forEach(i=>i.value="");
+  texto.value="";
 }
 </script>
 
