--- a/calculadora.html
+++ b/calculadora.html
@@ -142,7 +142,7 @@ textarea{
 
 <div class="form-check mb-2">
 <input type="checkbox" id="parceria" class="form-check-input">
-<label class="form-check-label">Parceria PM (10%)</label>
+<label class="form-check-label">Parceria (10%)</label>
 </div>
 
 <label>Total</label>
@@ -222,3 +222,4 @@ function limpar(){
 
 </body>
 </html>
+
