--- a/calculadora.html
+++ b/calculadora.html
@@ -55,16 +55,16 @@ textarea{
 
 <body>
 
-<!-- ================= MENU / NAVBAR ================= -->
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
   <div class="d-flex align-items-center gap-3">
     <img src="https://imgur.com/UX64xoQ.png" style="height:60px;border-radius:8px">
     <div class="logo">Fusion Customs</div>
   </div>
-  <nav class="nav-links d-none d-md-flex align-items-center">
+  <nav class="nav-links d-none d-md-flex">
     <a href="index.html">Início</a>
     <a href="tabela.html">Preços</a>
+    <a href="shop.html">Loja</a>
     <a href="relatorio.html">Relatório</a>
     <a href="funcionarios.html">Funcionários</a>
   </nav>
@@ -85,6 +85,8 @@ textarea{
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 2" data-valor="72000" type="checkbox"> Motor Nível 2</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 3" data-valor="82000" type="checkbox"> Motor Nível 3</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Motor Nível 4" data-valor="92000" type="checkbox"> Motor Nível 4</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Bloco de Motor" data-valor="32000" type="checkbox"> Bloco de Motor</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Som do Motor" data-valor="32000" type="checkbox"> Som do Motor</div>
 
 <hr><b>Freios</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Freio Nível 1" data-valor="32000" type="checkbox"> Freio Nível 1</div>
@@ -106,6 +108,8 @@ textarea{
 <div class="form-check"><input class="form-check-input item" data-nome="Turbo" data-valor="50000" type="checkbox"> Turbo</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Full Tunagem" data-valor="350000" type="checkbox"> Full Tunagem</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Blindagem" data-valor="500000" type="checkbox"> Blindagem</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Pneus" data-valor="1000000" type="checkbox"> Blindagem Pneus</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Blindagem Full" data-valor="1500000" type="checkbox"> Blindagem Full</div>
 
 </div>
 </div>
@@ -118,27 +122,32 @@ textarea{
 <div class="card-body">
 
 <b>Carroceria</b>
+<div class="form-check"><input class="form-check-input item" data-nome="Portas" data-valor="32000" type="checkbox"> Portas</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Saia" data-valor="32000" type="checkbox"> Saia</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Para-choque Dianteiro" data-valor="32000" type="checkbox"> Para-choque Dianteiro</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Para-choque Traseiro" data-valor="32000" type="checkbox"> Para-choque Traseiro</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Capô" data-valor="32000" type="checkbox"> Capô</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Escapamento" data-valor="32000" type="checkbox"> Escapamento</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Gaiola de Proteção" data-valor="32000" type="checkbox"> Gaiola de Proteção</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Vidro" data-valor="32000" type="checkbox"> Vidro</div>
 
 <hr><b>Interior</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Bancos" data-valor="32000" type="checkbox"> Bancos</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Painel" data-valor="32000" type="checkbox"> Painel</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Buzina" data-valor="32000" type="checkbox"> Buzina</div>
 
-<hr><b>Rodas</b>
-<div class="form-check"><input class="form-check-input item" data-nome="Rodas" data-valor="32000" type="checkbox"> Rodas</div>
+<hr><b>Pneus</b>
+<div class="form-check"><input class="form-check-input item" data-nome="Rodas Nacionais" data-valor="32000" type="checkbox"> Rodas Nacionais</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Rodas Importadas" data-valor="32000" type="checkbox"> Rodas Importadas</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Cor das Rodas" data-valor="32000" type="checkbox"> Cor das Rodas</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Fumaça do Pneu" data-valor="32000" type="checkbox"> Fumaça do Pneu</div>
 
-<hr><b>Pintura</b>
+<hr><b>Pintura & Luz</b>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Primária" data-valor="32000" type="checkbox"> Pintura Primária</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Secundária" data-valor="32000" type="checkbox"> Pintura Secundária</div>
+<div class="form-check"><input class="form-check-input item" data-nome="Pintura Cromada" data-valor="32000" type="checkbox"> Pintura Cromada</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Pintura Perolada" data-valor="32000" type="checkbox"> Pintura Perolada</div>
-
-<hr><b>Luzes</b>
+<div class="form-check"><input class="form-check-input item" data-nome="Pintura Decal" data-valor="32000" type="checkbox"> Pintura Decal</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Xenon" data-valor="32000" type="checkbox"> Xenon</div>
 <div class="form-check"><input class="form-check-input item" data-nome="Neon" data-valor="32000" type="checkbox"> Neon</div>
 
